# bustermachine

./: .gitignore  Buster.hs  IRC.hs  Logging.hs  Makefile  Misc.hs  Plugin.hs  README  UNIX.hs  bustermachine.cabal  configure
Buster/: IRC.hs  Internal.hs  Machine.hs  Message.hs  Misc.hs  Plugin.hs
Buster/Machine/: Identity.hs  Logging.hs  QuoteGrabs.hs  UNIX.hs
Nono/: .gitignore  Config.hs.example  Makefile  Nono.hs
plugins/: Identity.hs  Logging.hs  Makefile  QuoteGrabs.hs  UNIX.hs
