name: bustermachine
version: 0.1
description: IRC bot and plugins
license: MIT
homepage: http://github.com/pshc/bustermachine
build-type: Simple
build-depends: base, direct-plugins, mtl, network, old-time
exposed-modules: Buster.IRC, Buster.Misc,
                 Buster.Machine.Logging, Buster.Machine.UNIX
